--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
+      
+    <a-entity
+    gltf-model="/models/prism/scene.gltf"
+    scale="5 5 5"
+    position="50 150 0"
+  >
       <a-text
         value="Hi Jess! could you see this :)"
         look-at="[gps-camera]"
