--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     gltf-model="/models/prism/scene.gltf"
     scale="5 5 5"
     position="50 150 0"
+    gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
   >
       <a-text
         value="Hi Jess! could you see this :)"
