--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <a-entity
     gltf-model="/models/prism/scene.gltf"
     scale="5 5 5"
-    position="50 150 0"
+    look-at="[gps-camera]"
     gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
   >
       <a-text
         value="Hi Jess! could you see this :)"
         look-at="[gps-camera]"
-        scale="120 120 120"
+        scale="40 40 40"
         gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
