--- a/index.html
+++ b/index.html
@@ -13,22 +13,19 @@
     <a-scene
       vr-mode-ui="enabled: false"
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
+      arjs="sourceType: webcam; debugUIEnabled: false;">
       
-    <a-entity
-    gltf-model="/models/prism/scene.gltf"
-    scale="5 5 5"
-    look-at="[gps-camera]"
-    gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
-  >
-      <a-text
-        value="Hi Jess! could you see this :)"
-        look-at="[gps-camera]"
-        scale="40 40 40"
-        gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
-      ></a-text>
-      <a-camera gps-camera rotation-reader> </a-camera>
+          <a-entity
+            gltf-model="/models/prism/scene.gltf"
+            scale="5 5 5"
+            gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
+          >
+          <a-text
+            value="Hi Jess! could you see this :)"
+            scale="100 100 100"
+            gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
+          ></a-text>
+          <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
 </html>
