added simulated ll to camera

--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
             scale="5 5 5"
             gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
           >
-          <a-text
-            value="Hi Jess! could you see this :)"
-            scale="100 100 100"
-            gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
-          ></a-text>
-          <a-camera gps-camera rotation-reader> </a-camera>
+          <a-camera gps-camera rotation-reader simulateLatitude='39.999243' simulateLongitude='-75.108587'> </a-camera>
     </a-scene>
   </body>
 </html>
