--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <a-entity
             gltf-model="/models/prism/scene.gltf"
             scale="5 5 5"
-            gps-entity-place="latitude: 39.999332; longitude: -75.108525;"
+            gps-entity-place="latitude: 40.7449897; longitude: -73.8765986;"
           >
-          <a-camera gps-camera rotation-reader simulateLatitude='39.999243' simulateLongitude='-75.108587'> </a-camera>
+          <a-camera gps-camera rotation-reader simulateLatitude simulateLongitude> </a-camera>
     </a-scene>
   </body>
 </html>
