--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a-entity
             gltf-model="/models/prism/scene.gltf"
             scale="5 5 5"
-            gps-entity-place="latitude: 40.7449897; longitude: -73.8765986;"
+            gps-entity-place="latitude: 39.999337; longitude: -75.108538;"
           >
           <a-camera gps-camera rotation-reader simulateLatitude simulateLongitude> </a-camera>
     </a-scene>
