--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             scale="5 5 5"
             gps-entity-place="latitude: 39.999337; longitude: -75.108538;"
           >
-          <a-camera gps-camera rotation-reader simulateLatitude simulateLongitude> </a-camera>
+          <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
 </html>
