--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <a-entity
             gltf-model="/models/prism/scene.gltf"
             scale="5 5 5"
+            look-at="[gps-camera]"
             gps-entity-place="latitude: 39.999337; longitude: -75.108538;"
           >
           <a-camera gps-camera rotation-reader> </a-camera>
