--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>GeoAR.js demo</title>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Mural Arts</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+      body {
+        height: 3000px; /* Used to enable scrolling */
+        background: linear-gradient(180deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 85%);
+      }
+      </style>
   </head>
+  <body class="container flex justify-center w-full">
+      <div class="w-5/6 h-full py-12 flex flex-col">
+        <span class="h-1/8 text-white text-4xl font-black mb-36">
+        In a world after police & prisons, 
+          what will our collective safety & sanctuary 
+          look like in the future?
+        </span>
+        <a class="text-center h-auto border rounded-full border-white animate-pulse text-white font-semi text-xl w-1/5" href="/AR.html" >AR</a>
 
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-      <a-text value="hey Kenia, can you read this?" look-at="[gps-camera]" scale="100 100 100"
-        gps-entity-place="latitude: 39.999337; longitude: -75.108538;"
-      ></a-text>
-      <a-entity gps-entity-place="latitude: 39.9993374; longitude: -75.1085383;" gltf-model="./models/prism/scene.gltf" rotation="0 180 0" animation-mixer scale="0.15 0.15 0.15"/>
-      <a-camera gps-camera rotation-reader> </a-camera>
-    </a-scene>
+
+      </div>
+      
+    
+    <script src="" async defer></script>
   </body>
 </html>
