updated link to VR instead of AR

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           what will our collective safety & sanctuary 
           look like in the future?
         </span>
-        <a class="text-center h-auto border rounded-full border-white animate-pulse text-white font-semi text-xl w-1/5" href="/AR.html" >AR</a>
+        <a class="text-center h-auto border rounded-full border-white animate-pulse text-white font-semi text-xl w-1/5" href="/future.html" >VR</a>
 
 
       </div>
