--- a/index.html
+++ b/index.html
@@ -11,26 +11,69 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <style>
       body {
         height: 3000px; /* Used to enable scrolling */
         background: linear-gradient(180deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 85%);
       }
+      html {
+              box-sizing: border-box;
+            }
+            *, *:before, *:after {
+              box-sizing: inherit;
+            }
+            body { margin: 0; }
+            .outer {
+            }
+            .frame { 
+              display: flex;
+              height: auto;
+            }
+            .frame>* {
+              flex: 1 1 50%;
+            }
+            canvas { 
+              width: 100%;
+              height: 100%;
+            }
       </style>
   </head>
-  <body class="container flex justify-center w-full">
-      <div class="w-5/6 h-full py-12 flex flex-col">
+  <body class="container flex flex-col w-full lg:hidden">
+      <div class="w-5/6 h-auto pt-12 flex flex-col self-center">
         <span class="h-1/8 text-white text-4xl font-black mb-36">
         In a world after police & prisons, 
           what will our collective safety & sanctuary 
           look like in the future?
         </span>
-        <a class="text-center h-auto border rounded-full border-white animate-pulse text-white font-semi text-xl w-1/5" href="/future.html" >VR</a>
+      </div>
+      <div id='student'class="w-5/6 h-screen self-center">
+        <div class="container border">
+          <div class="frame flex flex-col w-">
+            <!---3D INLINE RENDERER-->
+            <div id="result">
+              <canvas></canvas>
+            </div>
+            <!---SECONDARY TEXT-->
+            <div id="editor" class='text-white text-2xl font-black mb-36 py-12 text-center'> hello testing the waters with a future beyond now.
+            </div>
+            <!---3D INLINE RENDERER-->
+            <div id="result">
+              <canvas></canvas>
+            </div>
+          </div>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/85/three.min.js"></script>    
 
+        </div>
+
+      </div>
+      <div class="flex flex-row self-center w-1/2">
+        <a class="text-center h-auto border rounded-full border-white text-white font-semi text-xl px-4" href="/future.html" >Team</a>
+        <a class="text-center h-auto border rounded-full border-white animate-pulse text-white font-semi px-4 text-xl ml-4" href="/future.html" >VR</a>
 
       </div>
       
     
-    <script src="" async defer></script>
+    <script src="app.js" async defer></script>
   </body>
 </html>
