added grid for students

--- a/index.html
+++ b/index.html
@@ -65,10 +65,29 @@
   
         </div>
       </div>
-      <div id='About the class' class="border container h-screen self-center flex flex-col p-20">
+      <div id='About the class' class="border w-full h-screen self-center flex flex-col p-20">
+        <div id='Class' class="text-4xl font-black text-white text-center mb-6"><span>Students</span></div>
+        <div id='Student Names'class="grid gap-6 grid-cols-2">
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
+          <div class="bg-white h-8"></div>
 
-        <div id='Students' class="text-4xl font-black text-white text-center"><span>Class</span></div>
-        <div id='Class' class="text-xl font-black text-white text-center"><span>Students</span></div>
+        </div>
 
       </div>
 
