--- a/future.html
+++ b/future.html
@@ -14,21 +14,12 @@
         <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     </head>
     <body>
-
-    <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#E3286F"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#E3286F"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="400" height="400" color="#5B3054"></a-plane>
-      <a-sky color="#272E4A"></a-sky>
-    </a-scene>
-  </body>
-</html>
-
-
-
-
-        
-        <script src="" async defer></script>
+        <a-scene>
+          <a-box position="-1 0.5 -3" rotation="0 45 0" color="#E3286F"></a-box>
+          <a-sphere position="0 1.25 -5" radius="1.25" color="#E3286F"></a-sphere>
+          <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#E3286F"></a-cylinder>
+          <a-plane position="0 0 -4" rotation="-90 0 0" width="400" height="400" color="#272E4A"></a-plane>
+          <a-sky color="#272E4A"></a-sky>
+        </a-scene>
     </body>
 </html>
