added mobile audio playback

--- a/future.html
+++ b/future.html
@@ -28,7 +28,12 @@
 
         <script>
           var sound = new Howl({
-            src: ['/assets/Beginning.m4a']});
+            src: ['/assets/Beginning.m4a'],
+            onplayerror: function() {
+              sound.once('unlock', function() {
+                sound.play();});
+               }  
+          });
           sound.play();
         </script>
 
