--- a/future.html
+++ b/future.html
@@ -22,7 +22,7 @@
         <!-- Open event-->
 
 
-          <button id="eventStart" class="h-12 bg-red-200 self-center absolute z-40" onclick="start()">ENTER</button>
+        <button id="eventStart" class="h-12 text-white font-bold self-center absolute z-40" onclick="start()">ENTER</button>
 
 
 
