--- a/future.html
+++ b/future.html
@@ -24,6 +24,8 @@
 
         <button id="eventStart" class="h-12 text-white font-bold self-center absolute z-40" onclick="start()">ENTER</button>
 
+        <a-scene class="hidden"></a-scene>
+
 
 
         <a-scene id="vrScene" class="filter blur-md">
