adding one more flower to see if it breaks

--- a/future.html
+++ b/future.html
@@ -28,8 +28,7 @@
           <!--entity-->
           <a-entity position="0 2 -.7" rotation="0 180 0" gltf-model="#flower"  scale="0.001 0.001 0.001" animation-mixer="timeScale: .5" ></a-entity>
 
-          <!--<a-entity position="3.23068 2 -0.7" rotation="0 90 0" gltf-model="#flower" scale="0.001 0.001 0.001"></a-entity>
-          <a-entity position="5.23416 2 -0.7894" rotation="0 90 0" gltf-model="#flower" scale="0.001 0.001 0.001"></a-entity>-->
+          <a-entity position="3.23068 2 -0.7" rotation="0 90 0" gltf-model="#flower" scale="0.001 0.001 0.001"></a-entity>
           
           <!--camera-->
           <a-entity id="rig" position="0 1.8 0">
