--- a/future.html
+++ b/future.html
@@ -21,6 +21,8 @@
           <!--Asset Manager-->
           <a-assets>
             <a-asset-item id="flower" src="/models/dandelion_in_the_wind/scene.gltf" ></a-asset-item>
+            <a-asset-item id="prism" src="/models/prism/scene.gltf" ></a-asset-item>
+
             <img id="skymap" src="bg/sky.jpg" crossorigin="anonymous">
           </a-assets>
 
@@ -29,7 +31,10 @@
           <a-entity position="0 2 -.7" rotation="0 180 0" gltf-model="#flower"  scale="0.001 0.001 0.001" animation-mixer="timeScale: .5" ></a-entity>
 
           <a-entity position="3.23068 2 -0.7" rotation="0 90 0" gltf-model="#flower" scale="0.001 0.001 0.001"></a-entity>
-          
+
+          <a-entity position="-10.71589 4.43847 -0.7" rotation="1 1 0" gltf-model="#prism" scale="0.83 1 0.84"></a-entity>
+
+
           <!--camera-->
           <a-entity id="rig" position="0 1.8 0">
             <a-entity camera look-controls wasd-controls >
