added prism light

--- a/future.html
+++ b/future.html
@@ -47,6 +47,7 @@
           <!--world-->
 
           <a-light type="point" light="color: #fff; intensity:0.18" position="-3 -10 0"></a-light>
+          <a-light type="point" light="type: spot; color: #eee1fe; intensity: 0.66; angle: 24.08; decay: 3.42; penumbra: 1" position="-10.89304 5.0645 4.47553" rotation="-43.65 0 0"></a-light>
           <a-light type="point" light="type: spot; color: #fffbcf; intensity: 0.77; angle: 6.59; decay: 3.42; penumbra: 0.58" position="0.03641 1.99222 0.48307"></a-light>
           <a-light type="point" light="type: spot; color: #eee1fe; intensity: 0.54; angle: 29.16; decay: 3.42; penumbra: 1" position="0.06546 2.1761 0.6083" rotation="-43.65 0 0"></a-light>
 
