--- a/portal.html
+++ b/portal.html
@@ -27,7 +27,7 @@
           <a-assets>
             <a-asset-item id="flower" src="/models/dandelion_in_the_wind/scene.gltf" ></a-asset-item>
             <a-mixin id="voxel"
-           geometry="primitive: box; height: 0.5; width: 0.5; depth: 0.5"
+           geometry="primitive: box; height: 1; width: 1; depth: .5"
            material="shader: standard"
            random-color
            snap="offset: 0.25 0.25 0.25; snap: 0.5 0.5 0.5"
