--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/85/three.min.js"></script>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body style="background-color: #292D50;">
 
@@ -22,10 +27,10 @@
         <!-- NAVIGATION -->
           <nav id="main nav" style="background-image: url(/bg/1.png);" class="hidden h-10 border-b border-black sticky top-0 sm:flex flex-wrap justify-center">
           <div id="Pages" class="h-full w-full flex justify-evenly text-white">
-            <button id="VR Experience"> <a href="">VR</a></button>
-            <button id="Mural"> <a href="">MURAL</a></button>
-            <button id="STUDENTS"> <a href="">STUDENTS</a></button>
-            <button id="VR Experience"> <a href="">CREDITS</a></button>
+            <button id="VR Experience"> <a href="#landing">VR</a></button>
+            <button id="Mural"> <a href="#mural">MURAL</a></button>
+            <button id="STUDENTS"> <a href="#students">STUDENTS</a></button>
+            <button id="VR Experience"> <a href="#credits">CREDITS</a></button>
 
           </div>
           </nav>
@@ -57,7 +62,7 @@
 
 
         <!-- MURAL -->
-            <section style="background-image: url(/bg/5.png);" class="hidden bg-cover bg-center sm:flex">
+            <section id="mural" style="background-image: url(/bg/5.png);" class="hidden bg-cover bg-center sm:flex">
 
 
               <img src="/assets/mural.jpg" class="w-full object-contain p-10 lg:p-24" alt="">
